components/DatePicker/style.css
@import './default-config.css';
@import 'config.css';

.dpBoxWrap {
    width: 100%;
    position: relative;
    font-weight: normal;
    height: 30px;
}

.dp {
    position: relative;
    max-width: 100%;
    border: 1px solid #D7D6D6;
    font-weight: normal;
    float: left;
}

.dp.dpNoLabel {
    width: 100%;
}
.dpHalf {
    width: 49%;
}

.dpWrap {
    float: left;
}

.dpWrap.last {
    margin: 0;
}

.dpWrap input {
    width: 100%;
    padding: 4px 36px 4px 10px;
    border: none;
    height: 28px;
}

.dpWrap button {
    width: 26px;
    height: 26px;
    position: absolute;
    top: 1px;
    right: 1px;
    border: none;
    background: var(--ut-front-react-standardDatePickerBackgroundColor);
    background-image: url('./images/calendar.png');
    background-repeat: no-repeat;
    background-position: center center;
}

.dpWrap .label, .masterLabel {
    float: left;
    width: auto;
    margin: 5px 2% 0 0;
    text-align: right;
}

.dpBoxGroupWrap {
    max-width: 100%;
}

.masterLabel, .dpBoxGroupWrap {
    float: left;
}

.verticalWrapper .dpWrap {
    width: 100%;
    float: right;
    margin-bottom: 5px;
}

.verticalWrapper .dpWrap .label{
    width: 23%;
    text-align: center;
    font-weight: bold;
}

.verticalWrapper .dpWrap .dp{
    width: 74%;
    float: right;
}

/* Styles for Simple Date Picker */

.datePicker {
    width: 100%;
    height: 30px;
    position: relative;
    display: table-cell;
    vertical-align: middle;
}

.datePicker input:hover {
    cursor: pointer !important;
}

.datePicker input {
    padding-right: 32px !important;
    padding-left: 5px !important;
}

.datePicker hr {
    display: none;
    width: 0px;
}

.datePickerIcon {
    position: absolute;
    right: 0px;
    top: 0px;
    height: 26px;
    width: 26px;
    margin: 2px;
    background: var(--ut-front-react-standardDatePickerBackgroundColor);
    background-image: url('./images/calendar.png');
    background-repeat: no-repeat;
    background-position: center center;
}

.error {
    border-color: #ff3333 !important;
}

.errorWrap {
    height: 23px;
    overflow: hidden;
    font-size: 12px;
    -webkit-transition: all 0.6s; /* Safari */
    transition: all 0.6s;
}

.errorWrap .errorMessage {
    position: relative !important;
    display: block;
    color: #ff3333;
    padding-top: 5px;
}

.hh {
    height: 0 !important;
}

.textFieldStyle {
    cursor: pointer;
    width: 100%;
    height: 100%;
}

.dpStylesValid {
    border: 1px solid #D6D6D6;
    height: 30px;
}

.dpStylesNonValid {
    border: 1px solid #ff3333;
    height: 30px;
}


.wrap {
    width: 100%;
    display: table;
    font-size: 14px;
    color: #595959;
}

